Modified styling on these componenets to fix extra spacing at thte top of every page

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,3 @@
-.nav-container{
-
+.nav-container {
+	margin-bottom: 0px;
 }
